# pro-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  LICENSE  MANIFEST.txt  README.md  SECURITY.md
driver/linux-arm64/: README.md  proglove-headless-ipc-host
driver/linux-x64/: README.md  proglove-headless-ipc-host
driver/macos-arm64/: README.md
sdk/: PACKAGE_INFO.txt  README.md
sdk/demo/: LICENSE  README.md  justfile
sdk/demo/config/: kapandji.yaml
sdk/demo/cpp/: CMakeLists.txt  README.md  justfile
sdk/demo/cpp/include/proglove_demo/: Utils.hpp
sdk/demo/cpp/include/prohand_demo/: Utils.hpp
sdk/demo/cpp/src/: connect.cpp  connect_glove.cpp  cyclic_motion.cpp  kapandji.cpp  ping.cpp  test_glove.cpp  test_hand.cpp
sdk/demo/python/: README.md  justfile  pyproject.toml
sdk/demo/python/src/proglove_demo/: __init__.py  connect.py  test_glove.py  utils.py
sdk/demo/python/src/prohand_demo/: __init__.py  connect.py  cyclic_motion.py  debug_streaming.py  kapandji.py  ping.py  test_hand.py  udcap_ctrl.py  utils.py
sdk/docs/: API.md  EXAMPLES.md  LICENSE
sdk/proglove_sdk/: LICENSE  README.md
sdk/proglove_sdk/cpp/: CMakeLists.txt
sdk/proglove_sdk/cpp/include/proglove_sdk/: ProGloveClient.hpp  proglove_sdk.h
sdk/proglove_sdk/lib/: libproglove_client_sdk.dylib
sdk/proglove_sdk/python/: README.md  pyproject.toml
sdk/proglove_sdk/python/proglove_sdk/: __init__.py  proglove_sdk.py
sdk/prohand_sdk/: README.md
sdk/prohand_sdk/cpp/: CMakeLists.txt
sdk/prohand_sdk/cpp/include/prohand_sdk/: ProHandClient.hpp  prohand_sdk.h
sdk/prohand_sdk/lib/: libprohand_client_sdk.dylib
sdk/prohand_sdk/python/: README.md  pyproject.toml
sdk/prohand_sdk/python/prohand_sdk/: __init__.py  prohand_sdk.py
