[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proglove-sdk"
version = "0.1.0"
description = "ProGlove Client SDK - Python bindings for ProGlove tactile gloves"
readme = "../README.md"
requires-python = ">=3.7"
license = {text = "Proprietary"}
authors = [
    {name = "Proception AI, Inc.", email = "support@proception.ai"}
]
keywords = ["robotics", "glove", "proglove", "tactile", "sensor", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Robotics",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/proception-ai/proglove"

[tool.setuptools]
packages = ["proglove_sdk"]

[tool.setuptools.package-data]
# Note: Library files are in ../lib/ and found automatically by proglove_sdk.py
# No package_data needed for library files

